[package]
name = "minecraftty"
version = "0.1.0"
edition = "2021"
description = "A terminal-based 3D voxel renderer inspired by Minecraft"
license = "MIT"

[dependencies]
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
anyhow = "1.0"
glam = "0.25"
noise = "0.8"
crossterm = "0.27"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"

env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1